# vanilla-updates-utility

./: .gitignore  README.md  meson.build
data/: meson.build  org.vanillaos.UpdatesUtility.appdata.xml.in  org.vanillaos.UpdatesUtility.desktop.in  org.vanillaos.UpdatesUtility.gschema.xml
data/icons/: meson.build
debian/: changelog  control  copyright  debhelper-build-stamp  files
po/: LINGUAS  POTFILES  ar.po  ckb.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  fi.po  fr.po  ga.po  id.po  it.po  kab.po  lo.po  meson.build  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sv.po  ta.po  tr.po  uk.po  updates_utility.pot  vi.po  zh_Hans.po  zh_Hant.po
vanilla_updates_utility/: main.py  meson.build  updates-utility.gresource.xml  vanilla-updates-utility.in
vanilla_updates_utility/gtk/: profile.ui  window-main.ui
vanilla_updates_utility/utils/: meson.build  wrapper.py
vanilla_updates_utility/windows/: main_window.py  meson.build
